--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.19.2",
     "mysql2": "^3.11.0",
     "sequelize": "^6.37.3",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "zod": "^3.23.8"
   }
 }
